# ArcaeaImageGenerator

./: .gitignore  README.md  pyproject.toml
ArcaeaImageGenerator/: test.py
ArcaeaImageGenerator/api/: request.py
ArcaeaImageGenerator/image_message/: __init__.py
ArcaeaImageGenerator/image_message/best_30/: chieri_style.py
ArcaeaImageGenerator/image_message/single_song/: andreal_style_v3.py  arcaea_style.py
ArcaeaImageGenerator/schema/v5/: user_info.py
image_generator/: __init__.py  andreal_style_v3.py  assets.py  b30_image.py  recent_image.py  request.py  utils.py
image_generator/AUA/: __init__.py
image_generator/AUA/schema/: __init__.py
image_generator/AUA/schema/api/v5/: __init__.py  song_info.py  user_best.py
image_generator/_api_result/: b30_data.json  recent_data.json  request.py
image_generator/_resolver/: recent_data.json  resolver.py
image_generator/b30/: iyume_style.py
image_generator/single_song/: andreal_style_v3.py  arcaea_style.py
tests/: bg_adjust.py  create_mask.py  create_table.py  test_image_generator.py
tests/_src/: PFL.py  bg_adjust.py  create_mask.py  create_table.py
